<resources>
    <string name="app_name">MyMovie</string>
    <string name="id">Movie ID</string>
    <string name="title">Movie Title</string>
    <string name="titleData">Enter Movie title</string>
    <string name="genre">Genre</string>
    <string name="genreData">Enter Genre</string>
    <string name="year">Year</string>
    <string name="yearData">Enter year of release</string>
    <string name="rating">Rating</string>
    <string name="insert">Insert</string>
    <string name="show">Show</string>
    <string name="showPg13">Show all PG13 movies</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    
    <string-array name="ratingData">
        <item>G</item>
        <item>PG</item>
        <item>PG13</item>
        <item>NC16</item>
        <item>M18</item>
        <item>R21</item>
    </string-array>
</resources>